Solved issue keyboard covers input field

--- a/src/global.scss
+++ b/src/global.scss
@@ -259,3 +259,8 @@ ion-thumbnail {
 .grayed {
   color : var(--color-gray);
 }
+
+ion-app {
+  /*animation of native keyboard show*/
+  transition: margin 300ms;
+}
